--- a/style/game/tiles.scss
+++ b/style/game/tiles.scss
@@ -6,7 +6,6 @@
   text-align: center;
   margin-left: -5px;
   margin-bottom: -3px;
-  margin-top: -15px;
 }
 
 .tile-stack {
